# kaggle_monorepo

./: .dockerignore  .gitignore  .mise.toml  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  ruff.toml
projects/CMI_Detect_Behavior_with_Sensor_Data/: .gitignore  AGENTS.md  CLAUDE.md  README.md  analyze_features.py  analyze_layer_structure.py  analyze_models.py  analyze_models_detailed.py  create_exp014_architecture_diagram.py  mise.toml  model_analyzer.py  pyproject.toml  run_notebook_downloader.py  test_exp013.py  test_exp014.py  test_exp014_model_only.py  test_exp014_simple.py  test_exp014_train_fix.py
projects/CMI_Detect_Behavior_with_Sensor_Data/.claude/: settings.local.json
projects/CMI_Detect_Behavior_with_Sensor_Data/.serena/: project.yml
projects/CMI_Detect_Behavior_with_Sensor_Data/codes/: dataset-metadata.json
projects/CMI_Detect_Behavior_with_Sensor_Data/docs/: chatgpt_Fourier_Neural_Operator.md  chatgpt_augmentation.md  chatgpt_convnext1d.md  chatgpt_fusion_heads.md  chatgpt_fusion_heads_without_orientation.md  chatgpt_loss_plan.md  chatgpt_orient_constraints.md  clasp_segmentation_plan.md  cmi-2025-demo-submission.ipynb  codex_model_architecture.md  competition_overview.md  data_description.md  directory_structure_planning.md  exp002_plan.md  exp013_plan.md  exp014_plan.md  exp015_plan.md  exp016_plan.md  exp017_plan.md  exp018_plan.md  exp019_plan.md  exp020_plan.md  exp021_plan.md  exp022_plan.md  exp023_plan.md  exp024_plan.md  exp025_plan.md  exp026_plan.md  exp027_plan.md  exp028_plan.md  exp029_plan.md  exp030_plan.md  exp031_plan.md  exp032_plan.md  exp033_plan.md  exp034_plan.md  exp035_plan.md  exp036_plan.md  exp037_plan.md  exp038_plan.md  (+17 more)
projects/CMI_Detect_Behavior_with_Sensor_Data/notebooks/: clasp_segmentation_analysis.ipynb  clasp_segmentation_analysis.py  idea-with-spectrogram-cnn2d.ipynb  supervised_analyzer_fix.py  tstime_rocket_feats.ipynb
projects/CMI_Detect_Behavior_with_Sensor_Data/requirements/: dataset-metadata.json  requirements.txt
projects/CMI_Detect_Behavior_with_Sensor_Data/sub/: kernel-metadata.json  sub.ipynb
projects/CMI_Detect_Behavior_with_Sensor_Data/tests/: __init__.py  test_dataset_performance.py  test_exp007_dataset.py  test_exp007_single_sequence_dataset.py  test_exp010.py  test_exp010_dataset.py  test_exp011_softf1.py  test_exp013_dataset.py  test_exp013_demographics.py  test_exp014_dataset.py  test_exp014_integration.py  test_exp014_minirocket.py  test_exp014_model.py  test_exp014_visualize_model.py  test_exp015_pytorch_features.py  test_exp016_model.py  (+31 more)
projects/Deep_Past_Challenge_Translate_Akkadian_to_English/: .uuid  pyproject.toml
(+536 files in other folders)
