[project]
name = "CMI_Detect_Behavior_with_Sensor_Data"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "albumentations>=2.0.7",
  "cupy-cuda12x>=13.4.1",
  "einops>=0.8.1",
  "ema-pytorch>=0.7.7",
  "grpcio>=1.74.0", # for kaggle_evaluation
  "grpcio-tools>=1.74.0", # for kaggle_evaluation
  "huggingface-hub>=0.30.0",
  "hydra-core>=1.3.2",
  "imbalanced-learn>=0.13.0",
  "lightgbm>=4.3",
  "lightning>=2.5.0.post0",
  "loguru>=0.7.2",
  "matplotlib-venn>=1.1.2",
  "omegaconf>=2.3",
  "optuna>=3.5",
  "polars>=0.20.15",
  "pydantic==2.10.6",
  "pydantic-settings>=2.2.1",
  "rich>=14.0.0",
  "schedulefree>=1.4.1",
  "scipy>=1.15.2",
  "timm>=1.0.15",
  "torch>=2.6",
  "torchvision>=0.21",
  "tqdm>=4.64.1",
]

[tool.uv]
package = false

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu124" }
torchvision = { index = "pytorch-cu124" }

[dependency-groups]
dev = [
  "kaggle>=1.6.6",
  "notebook==7.3.2",
  "seaborn>=0.13.2",
  "streamlit>=1.43.2",
  "nbclassic>=1.3.1",
  "ruff>=0.12.1",
  "mypy>=1.16.1",
  "pytest>=8.4.1",
  "wandb>=0.16.4",
]
