[project]
name = "Deep_Past_Challenge_Translate_Akkadian_to_English"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "albumentations>=2.0.7",
  "cupy-cuda12x>=13.4.1",
  "einops>=0.8.1",
  "imbalanced-learn>=0.13.0",
  "librosa>=0.11.0",
  "lightgbm>=4.3",
  "lightning>=2.5.0.post0",
  "loguru>=0.7.2",
  "omegaconf>=2.3",
  "optuna>=3.5",
  "polars>=0.20.15",
  "pydantic==2.10.6",
  "pydantic-settings>=2.2.1",
  "schedulefree>=1.4.1",
  "timm>=1.0.15",
  "torch>=2.6",
  "torchvision>=0.21",
  "tqdm>=4.64.1",
  "wandb>=0.16.4",
]

[tool.uv]
package = false

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu124" }
torchvision = { index = "pytorch-cu124" }

[dependency-groups]
dev = [
  "kaggle>=1.6.6",
  "notebook==7.3.2",
  "seaborn>=0.13.2",
  "streamlit>=1.43.2",
  "kagglehub>=0.3.10",
  "nbclassic>=1.3.1",
]
